--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <header>
       <div class="container">
-        <h1>kt3k.com</h1>
+        <h1>kt3k.com<sup><small>TM</small></sup></h1>
       </div>
     </header>
 
