--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
 
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">I'm a software engineer, enthusiastic about JavaScript, OSS, TDD, DDD etc</p>
-                    <p class="large text-muted">Tokyo, Japan</p>
+                    <p class="large text-muted">I'm a software engineer, specializes in JavaScript,</p>
+                    <p class="large text-muted">enthusiastic about OSS, TDD, DDD etc,</p>
+                    <p class="large text-muted">based on Tokyo, Japan</p>
                 </div>
             </div>
 
@@ -119,7 +120,7 @@
                                     <h4 class="subheading">Graduated Kyoto University</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I was at the Faculty of Science in Kyoto University and majored Computer Science.</p>
+                                    <p class="text-muted">I was at the Faculty of Science in Kyoto University, majored Computer Science and graduated with B.A.</p>
                                 </div>
                             </div>
                         </li>
@@ -133,7 +134,7 @@
                                     <h4 class="subheading">ZYYX Inc.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I had an all-round experience around Web Techonology in ZYYX. I wrote software here in C++, Java, PHP, Perl, JavaScript, ActionScript etc. There were really varieties of different tasks.</p>
+                                    <p class="text-muted">I had an all-round experience around Web Techonology in ZYYX. I wrote software here in C++, Java, PHP, Perl, JavaScript, ActionScript etc. There were really varieties of different jobs.</p>
                                 </div>
                             </div>
                         </li>
@@ -175,7 +176,7 @@
                                     <h4 class="subheading">straw.js</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Released Open Source Native-JavaScript bridging framework for Mobile. It's basically my own version of PhoneGap.</p>
+                                    <p class="text-muted">Released Open Source Native-JavaScript bridging framework for Mobile. It's basically my own rewrite of PhoneGap. I had learned a lot of things about Android's Java and Objective-C.</p>
                                 </div>
                             </div>
                         </li>
