--- a/index.html
+++ b/index.html
@@ -1,68 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>kt3k.com</title>
-
-    <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
     <link href="css/agency.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
-
-
-
-
-
 <body id="page-top" class="index">
-
     <header>
       <div class="container">
-        <h1>kt3k.com<sup><small>TM</small></sup></h1>
+        <h1>kt3k.com</h1>
       </div>
     </header>
-
-
-
-
-
-
-    <!-- Hi Section -->
     <section id="hi" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Hi!</h2>
-                    <!--h3 class="section-heading">Welcome to kt3k.com!</h3-->
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-offset-4 col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/yoshiya.jpg" class="img-responsive img-circle" alt="">
+                        <img src="https://kt3k.org/kt3k.jpg" class="img-responsive img-circle" alt="">
                         <h4>Yoshiya Hinosawa</h4>
                         <p class="text-muted">Software Engineer</p>
                         <ul class="list-inline social-buttons">
@@ -82,7 +47,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">I'm a software engineer, specializes in JavaScript,</p>
@@ -90,15 +54,8 @@
                     <p class="large text-muted">based on Tokyo, Japan</p>
                 </div>
             </div>
-
         </div>
     </section>
-
-
-
-
-
-
     <section id="experience">
         <div class="container">
             <div class="row">
@@ -180,51 +137,77 @@
                                 </div>
                             </div>
                         </li>
-                        <!--li class="timeline-inverted">
-                            <div class="timeline-image" style="background-color: #115588;">
-                                <h4>NEXT</h4>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/cureapp.png" alt="">
                             </div>
-                        </li-->
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2015</h4>
+                                    <h4 class="subheading">CureApp, Inc.</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Worked on the bootstrap phase in a medical app startup.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/recruit.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2015-2019</h4>
+                                    <h4 class="subheading">Recruit</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Worked with that Recruit! I mainly worked as a frontend engineer and frontend tech lead.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/seqsense.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2019-2020</h4>
+                                    <h4 class="subheading">SEQSENSE Inc.</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">SEQSENSE is a robotics startup in Japan. They provide security guard robots, which mainly work in large buildings. My role wasn't a robotics engineer. I mainly worked on the web console for controlling robots from the security center in the building. The console shows the position and orientation of the robot in real time using MQTT over WebSocket. I had really good experience on frontend which interact with/via IoT tech stack.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/deno.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2021-</h4>
+                                    <h4 class="subheading">Deno Land Inc.</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">I started contributing to <a href="https://deno.land/" target="_blank">Deno</a> in 2018. The creator, <a href="https://en.wikipedia.org/wiki/Ryan_Dahl" target="_blank">Ryan</a>, invited me in November 2021. I joined Deno in January 2022. I've been working on Deno CLI, Deno Deploy, other related projects.</p>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
-
-
-
-
     <footer>
         <div class="container">
             <div class="row">
-
                 <div class="col-md-12">
                     <span class="copyright">
                       <i class="fa fa-copyright"></i> kt3k.com
                     </span>
                 </div>
-
             </div>
         </div>
     </footer>
-
-
-
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/agency.js"></script>
-
-
-
-
 </body>
-
 </html>
