--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                     <h4 class="subheading">Deno Land Inc.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I started contributing to <a href="https://deno.land/" target="_blank">Deno</a> in 2018. The creator, <a href="https://en.wikipedia.org/wiki/Ryan_Dahl" target="_blank">Ryan</a>, invited me in November 2021. I joined Deno in January 2022. I've been working on Deno CLI, Deno Deploy, other related projects.</p>
+                                    <p class="text-muted">I started contributing to <a href="https://deno.land/" target="_blank">Deno</a> in 2018. The creator, <a href="https://en.wikipedia.org/wiki/Ryan_Dahl" target="_blank">Ryan</a>, invited me to the company in November 2021. I joined Deno in January 2022. I've been working on Deno CLI, Deno Deploy, other related projects.</p>
                                 </div>
                             </div>
                         </li>
