--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                     <h4 class="subheading">SEQSENSE Inc.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">SEQSENSE is a robotics startup in Japan. They provide security guard robots, which mainly work in large buildings. My role wasn't a robotics engineer. I mainly worked on the web console for controlling robots from the security center in the building. The console shows the position and orientation of the robot in real time using MQTT over WebSocket. I had really good experience on frontend which interact with/via IoT tech stack.</p>
+                                    <p class="text-muted">SEQSENSE is a robotics startup in Japan. They provide security guard robots, which mainly work in large buildings. My role wasn't a robotics engineer, but a web frontend engineer who is responsible for the console for controlling robots. The console shows the position and orientation of the robot in real time using MQTT over WebSocket. I had really good experience on frontend which interacts with actual devices via IoT tech stack.</p>
                                 </div>
                             </div>
                         </li>
@@ -190,7 +190,7 @@
                                     <h4 class="subheading">Deno Land Inc.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I started contributing to <a href="https://deno.land/" target="_blank">Deno</a> in 2018. The creator, <a href="https://en.wikipedia.org/wiki/Ryan_Dahl" target="_blank">Ryan</a>, invited me to the company in November 2021. I joined Deno in January 2022. I've been working on Deno CLI, Deno Deploy, other related projects.</p>
+                                    <p class="text-muted">I started contributing to <a href="https://deno.land/" target="_blank">Deno</a> in 2018. The creator, <a href="https://en.wikipedia.org/wiki/Ryan_Dahl" target="_blank">Ryan</a>, invited me to the company in November 2020. I joined Deno in January 2022. I've been working on Deno CLI, Deno Deploy, other related projects.</p>
                                 </div>
                             </div>
                         </li>
