--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                     <h4 class="subheading">SEQSENSE Inc.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">SEQSENSE is a robotics startup in Japan. They provide security guard robots, which mainly work in large buildings. My role wasn't a robotics engineer, but a web frontend engineer who is responsible for the console for controlling robots. The console shows the position and orientation of the robot in real time using MQTT over WebSocket. I had really good experience on frontend which interacts with actual devices via IoT tech stack.</p>
+                                    <p class="text-muted">SEQSENSE is a robotics startup in Japan. They provide security guard robots, which mainly work in large buildings. My role wasn't a robotics engineer, but a web frontend engineer who was responsible for the console for controlling robots. The console shows the position and orientation of the robot in real time using MQTT over WebSocket. I had really good experience on frontend which interacts with actual devices via IoT tech stack.</p>
                                 </div>
                             </div>
                         </li>
