--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">I'm a software engineer, specializes in JavaScript,</p>
+                    <p class="large text-muted">I'm a software engineer, who specializes in JavaScript,</p>
                     <p class="large text-muted">enthusiastic about OSS, TDD, DDD etc,</p>
                     <p class="large text-muted">based on Tokyo, Japan</p>
                 </div>
@@ -78,7 +78,7 @@
                                     <h4 class="subheading">Graduated Kyoto University</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I was at the Faculty of Science in Kyoto University, majored Computer Science and graduated with B.A.</p>
+                                    <p class="text-muted">I was at the Faculty of Science at Kyoto University, majored in Computer Science and graduated with B.A.</p>
                                 </div>
                             </div>
                         </li>
@@ -92,7 +92,7 @@
                                     <h4 class="subheading">ZYYX Inc.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I had an all-round experience around Web Techonology in ZYYX. I wrote software here in C++, Java, PHP, Perl, JavaScript, ActionScript etc. There were really varieties of different jobs.</p>
+                                    <p class="text-muted">I had an all-around experience with Web Technology in ZYYX. I wrote software here in C++, Java, PHP, Perl, JavaScript, ActionScript etc. There were a very variety of different jobs.</p>
                                 </div>
                             </div>
                         </li>
@@ -106,7 +106,7 @@
                                     <h4 class="subheading">Hello Work App</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I presonally released Hello Work App in Google Play. It got some popularity and it has had about 8,000 active intall so far.</p>
+                                    <p class="text-muted">I personally released Hello Work App on Google Play. It got some popularity and it has had about 8,000 active installs so far.</p>
                                 </div>
                             </div>
                         </li>
@@ -120,7 +120,7 @@
                                     <h4 class="subheading">GREE, Inc.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Had experience in huge enterprize environment.</p>
+                                    <p class="text-muted">Had experience in a huge enterprise environment.</p>
                                 </div>
                             </div>
                         </li>
@@ -134,7 +134,7 @@
                                     <h4 class="subheading">straw.js</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Released Open Source Native-JavaScript bridging framework for Mobile. It's basically my own rewrite of PhoneGap. I had learned a lot of things about Android's Java and Objective-C.</p>
+                                    <p class="text-muted">Released Open Source Native-JavaScript bridging framework for Mobile. It's basically my own rewrite of PhoneGap. I learned a lot of things about Android's Java and Objective-C.</p>
                                 </div>
                             </div>
                         </li>
@@ -176,7 +176,7 @@
                                     <h4 class="subheading">SEQSENSE Inc.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">SEQSENSE is a robotics startup in Japan. They provide security guard robots, which mainly work in large buildings. My role wasn't a robotics engineer, but a web frontend engineer who was responsible for the console for controlling robots. The console shows the position and orientation of the robot in real time using MQTT over WebSocket. I had really good experience on frontend which interacts with actual devices via IoT tech stack.</p>
+                                    <p class="text-muted">SEQSENSE is a robotics startup in Japan. They provide security guard robots, which mainly work in large buildings. My role wasn't a robotics engineer, but a web frontend engineer who was responsible for the console for controlling robots. The console shows the position and orientation of the robot in real-time using MQTT over WebSocket. I had a really good experience on the front end which interacts with actual devices via the IoT tech stack.</p>
                                 </div>
                             </div>
                         </li>
@@ -190,7 +190,7 @@
                                     <h4 class="subheading">Deno Land Inc.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I started contributing to <a href="https://deno.land/" target="_blank">Deno</a> in 2018. The creator, <a href="https://en.wikipedia.org/wiki/Ryan_Dahl" target="_blank">Ryan</a>, invited me to the company in November 2020. I joined Deno in January 2021. I've been working on Deno CLI, Deno Deploy, other related projects.</p>
+                                    <p class="text-muted">I started contributing to <a href="https://deno.land/" target="_blank">Deno</a> in 2018. The creator, <a href="https://en.wikipedia.org/wiki/Ryan_Dahl" target="_blank">Ryan</a>, invited me to the company in November 2020. I joined Deno in January 2021. I've been working on Deno CLI, Deno Deploy, and other related projects.</p>
                                 </div>
                             </div>
                         </li>
