--- a/index.html
+++ b/index.html
@@ -78,103 +78,7 @@
                                     <h4 class="subheading">Deno Land Inc.</h4>
                                 </div>
                                 <div class="timeline-body">
-<<<<<<< HEAD
-<<<<<<< HEAD
-                                    <p class="text-muted">I was at the Faculty of Science at Kyoto University, majored in Computer Science and graduated with B.A.</p>
-=======
-                                    <p class="text-muted">I started contributing to <a href="https://deno.land/" target="_blank">Deno</a> in 2018. The creator, <a href="https://en.wikipedia.org/wiki/Ryan_Dahl" target="_blank">Ryan</a>, invited me to the company in November 2020. I joined Deno in January 2021. I've been working on Deno CLI, Deno Deploy, and other related projects.</p>
->>>>>>> 96c5fd3 (merge a295202)
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/zyyx.png" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2010-2012</h4>
-                                    <h4 class="subheading">ZYYX Inc.</h4>
-                                </div>
-                                <div class="timeline-body">
-<<<<<<< HEAD
-                                    <p class="text-muted">I had an all-around experience with Web Technology in ZYYX. I wrote software here in C++, Java, PHP, Perl, JavaScript, ActionScript etc. There were a very variety of different jobs.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/hw.png" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>May 2012</h4>
-                                    <h4 class="subheading">Hello Work App</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">I personally released Hello Work App on Google Play. It got some popularity and it has had about 8,000 active installs so far.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/gree.png" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2012-2014</h4>
-                                    <h4 class="subheading">GREE, Inc.</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Had experience in a huge enterprise environment.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/straw.png" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2014</h4>
-                                    <h4 class="subheading">straw.js</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Released Open Source Native-JavaScript bridging framework for Mobile. It's basically my own rewrite of PhoneGap. I learned a lot of things about Android's Java and Objective-C.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/cureapp.png" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2015</h4>
-                                    <h4 class="subheading">CureApp, Inc.</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Worked on the bootstrap phase in a medical app startup.</p>
-=======
-                                    <p class="text-muted">SEQSENSE is a robotics startup in Japan. They provide security guard robots, which mainly work in large buildings. My role wasn't a robotics engineer, but a web frontend engineer who was responsible for the console for controlling robots. The console shows the position and orientation of the robot in real time using MQTT over WebSocket. I had a really good experience on the front end which interacts with actual devices via the IoT tech stack.</p>
->>>>>>> 96c5fd3 (merge a295202)
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/recruit.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2015-2019</h4>
-                                    <h4 class="subheading">Recruit</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Worked with that Recruit! I mainly worked as a frontend engineer and frontend tech lead.</p>
-=======
                                     <p class="text-muted">I started contributing to <a href="https://deno.land/" target="_blank">Deno</a> in 2018. The creator, <a href="https://en.wikipedia.org/wiki/Ryan_Dahl" target="_blank">Ryan</a>, invited me to the company in November 2020. I joined Deno in January 2021. I've been working on Deno CLI, Deno Deploy, other related projects.</p>
->>>>>>> 2bc5084 (update)
                                 </div>
                             </div>
                         </li>
@@ -202,9 +106,6 @@
                                     <h4 class="subheading">Recruit</h4>
                                 </div>
                                 <div class="timeline-body">
-<<<<<<< HEAD
-                                    <p class="text-muted">I started contributing to <a href="https://deno.land/" target="_blank">Deno</a> in 2018. The creator, <a href="https://en.wikipedia.org/wiki/Ryan_Dahl" target="_blank">Ryan</a>, invited me to the company in November 2020. I joined Deno in January 2021. I've been working on Deno CLI, Deno Deploy, and other related projects.</p>
-=======
                                     <p class="text-muted">Worked in Recruit for about 4 years. I mainly worked as a frontend engineer and a frontend tech lead.</p>
                                 </div>
                             </div>
@@ -233,7 +134,7 @@
                                     <h4 class="subheading">straw.js</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Released Open Source Native-JavaScript bridging framework for Mobile. It's basically my own rewrite of PhoneGap. I learned a lot of things about Android's Java and Objective-C.</p>
+                                    <p class="text-muted">Released Open Source Native-JavaScript bridging framework for Mobile. It's basically my own rewrite of PhoneGap. I had learned a lot of things about Android's Java and Objective-C.</p>
                                 </div>
                             </div>
                         </li>
@@ -247,7 +148,7 @@
                                     <h4 class="subheading">GREE, Inc.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Had experience in a huge enterprise environment.</p>
+                                    <p class="text-muted">Had experience in huge enterprize environment.</p>
                                 </div>
                             </div>
                         </li>
@@ -261,7 +162,7 @@
                                     <h4 class="subheading">Hello Work App</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I personally released Hello Work App on Google Play. It got some popularity and it has had about 8,000 active installs so far. (The app discontinued now.)</p>
+                                    <p class="text-muted">I presonally released Hello Work App in Google Play. It got some popularity and it has had about 8,000 active intall so far. (The app discontinued now.)</p>
                                 </div>
                             </div>
                         </li>
@@ -275,7 +176,7 @@
                                     <h4 class="subheading">ZYYX Inc.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I had an all-around experience with Web Technology in ZYYX. I wrote software here in C++, Java, PHP, Perl, JavaScript, ActionScript etc. There were a very variety of different jobs.</p>
+                                    <p class="text-muted">I had an all-round experience around Web Techonology in ZYYX. I wrote software here in C++, Java, PHP, Perl, JavaScript, ActionScript etc. There were really varieties of different jobs.</p>
                                 </div>
                             </div>
                         </li>
@@ -289,7 +190,7 @@
                                     <h4 class="subheading">Graduated Kyoto University</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I was at the Faculty of Science at Kyoto University, studied mainly mathematics and computer science and graduated with B.A.</p>
+                                    <p class="text-muted">I was at the Faculty of Science in Kyoto University, studied mainly mathematics and computer science and graduated with B.A.</p>
                                 </div>
                             </div>
                         </li>
@@ -304,7 +205,6 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">I graduated from Azabu Gakuen. I have mixed feeling about this school. The school is very unique in the sense it gives students excessive amount of freedom, and as a result the school is full of chaos constantly. The experience there was very special to me.</p>
->>>>>>> 2bc5084 (update)
                                 </div>
                             </div>
                         </li>
