--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/logo.svg" />
+    <link rel="icon" href="img/logo-square-white.png" />
 </head>
 <body id="page-top" class="index">
     <header class="flex items-center justify-center gap-3 p-2">
