--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="description" content="The homepage of kt3k.com">
     <meta name="author" content="Yoshiya Hinosawa">
     <title>kt3k.com</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet">
     <link rel="icon" href="img/logo-square-white.png" />
 </head>
 <body id="page-top" class="index">
-    <header class="flex items-center justify-center gap-3 p-2">
+    <header class="flex items-center justify-center gap-3 p-3">
         <svg style="width: 20px" viewBox="0 0 347 500">
             <use xlink:href="img/logo-current-color.svg#logo" />
         </svg>
@@ -213,7 +213,7 @@
             </div>
         </div>
     </section>
-    <footer class="flex items-center justify-center gap-3 p-2">
+    <footer class="flex items-center justify-center gap-3 p-3">
         <svg style="width: 20px" viewBox="0 0 347 500">
             <use xlink:href="img/logo-current-color.svg#logo" />
         </svg>
