--- a/index.html
+++ b/index.html
@@ -124,6 +124,34 @@
                     </svg>
                   </a>
                 </li>
+                <li
+                  class="bg-gray-900 rounded-full w-12 h-12 flex justify-center items-center"
+                >
+                  <a
+                    class="w-7 h-7 text-white"
+                    target="_blank"
+                    href="https://x.com/kt3k"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="w-7 h-7"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      stroke-width="2"
+                      stroke="currentColor"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M4 4l11.733 16h4.267l-11.733 -16z"></path>
+                      <path
+                        d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772"
+                      ></path>
+                    </svg>
+                  </a>
+                </li>
               </ul>
             </div>
           </div>
